--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^5.0.1",
     "astro": "^3.2.0",
     "prettier-plugin-astro": "^0.12.0",
     "sass": "^1.68.0"
