--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@images/*": ["src/images/*"]
+      "@images/*": ["src/images/*"],
+      "@styles/*": ["src/styles/*"]
     }
   }
 }
