--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "astro": "^4.16.10",
+    "husky": "^9.1.6",
     "prettier-plugin-astro": "^0.12.0",
     "typescript": "^5.6.3"
   }
